add ajax temp data

--- a/app/views/knock/get_time.html.erb
+++ b/app/views/knock/get_time.html.erb
@@ -1,7 +1,10 @@
 
 
-<div style="width: 100px;text-align: center;font-size: 15px; letter-spacing: 0.1px;">
-  <%= @date %>
-  <p>
-  <%= @time %>
-</div>
+
+<table style="width: 160px;text-align: left;font-size: 15px; letter-spacing: 0.1px;margin-bottom: 10px">
+  <tr>
+    <td><%= @date %></td>
+    <td style="color: red"><%= @time %></td>
+  </tr>
+</table>
+
