--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -1,7 +1,4 @@
 
-
-
-
 <div style="width: 550px;margin: auto">
 
     <div>
@@ -28,16 +25,12 @@
     </div>
 
     <div style="font-size: 30px;float:left;margin-top:10px">
-
         <!--<%= button_to "上班", knock_in_path, :method => "get" %>-->
-
         <button id="btn_clock_in" type="button" style="width: 250px;height: 50px"> 上班 </button>
     </div>
 
     <div style="font-size: 30px;float: right;margin-top:10px">
-
         <!--<%= button_to "下班", knock_out_path, :method => "get" %>-->
-
         <button id="btn_clock_out" type="button" style="width: 250px;height: 50px"> 下班 </button>
     </div>
 </div>
@@ -52,28 +45,20 @@
     $("#btn_clock_in").click(function(){
         var des = $("#description").val();
 
-//        $.post("/knock/clock_in", { description: des }, function(data) {
-//            if(data.clock_in_result) {
-//
-//                alert(data.clock_in_result);
-//            } else {
-//                //use the data object
-//            }
-//        });
-
-
         $.ajax({
             url: "/knock/clock_in",
             type: 'POST',
-
-            data:  JSON.stringify({description:des}),
+            data:  {description:des},
             cache: false,
             success: function(data){
+                if (data.auth_result)
+                    alert(data.auth_result);
+                else if (data.clock_in_result)
+                    alert(data.clock_in_result);
+                else
+                    alert('oops! 出現錯誤了! 請確認打卡記錄!')
 
-                alert(data.clock_in);
-
-            }
-            ,
+            },
             error: function(){
                 alert('oops! 出現錯誤了! 請確認打卡記錄!');
             }
@@ -88,10 +73,14 @@
             type: 'POST',
             data:  {description:des},
             cache: false,
-            success: function(){
-                alert('successs');
-            }
-            ,
+            success: function(data){
+                if (data.auth_result)
+                    alert(data.auth_result);
+                else if (data.clock_out_result)
+                    alert(data.clock_out_result);
+                else
+                    alert('oops! 出現錯誤了! 請確認打卡記錄!')
+            },
             error: function(){
                 alert('oops! 出現錯誤了! 請確認打卡記錄!');
             }
