--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,11 @@
 
     <div style="margin-right: 10%; text-align: right">
         <% if user_signed_in? %>
-            <strong><%= current_user.email %></strong>
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+            <%= link_to current_user.email , my_hourse_path , :class => 'navbar-link' %> |
+            <%= link_to "登出", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
         <% else %>
-            <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-            <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+            <%= link_to "註冊", new_user_registration_path, :class => 'navbar-link'  %> |
+            <%= link_to "登入", new_user_session_path, :class => 'navbar-link'  %>
         <% end %>
     </div>
 
