--- a/app/views/home/my_hourse.html.erb
+++ b/app/views/home/my_hourse.html.erb
@@ -1,7 +1,7 @@
 
-<div style="font-size: 30px;float: left;margin-top:10px;margin-left:50px">
+<div style="font-size: 30px;float: left;margin-top:50px;margin-left:10%">
     <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
-    </p>
+    </p></br>
     <%= link_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
 
     <!--<%= button_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>-->
