--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,20 +8,20 @@
     <%= f.email_field :email, :autofocus => true %>
   </div>
 
-  <!--<div>-->
-    <!--<%= f.label :name, "姓名" %>-->
-    <!--<%= f.text_field :name %>-->
-  <!--</div>-->
+  <div>
+    <%= f.label :name, "姓名" %>
+    <%= f.text_field :name %>
+  </div>
 
-  <!--<div>-->
-    <!--<%= f.label :phone, "手機" %>-->
-    <!--<%= f.phone_field :phone %>-->
-  <!--</div>-->
+  <div>
+    <%= f.label :phone, "手機" %>
+    <%= f.phone_field :phone %>
+  </div>
 
-  <!--<div>-->
-    <!--<%= f.label :department, "部門" %>-->
-    <!--<%= f.text_field :department %>-->
-  <!--</div>-->
+  <div>
+    <%= f.label :department, "部門" %>
+    <%= f.text_field :department %>
+  </div>
 
   <div>
     <%= f.label :password, "密碼" %>
