--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -1,7 +1,15 @@
 
 <div style="width: 55%;margin: auto">
 
-    <div style="margin-top: 10px" id="time"></div>
+    <div id="talk" style="text-align: center">
+        Hi ,
+        <%-# current_user.name %>
+
+    </div>
+
+    <div id="time" style="margin-top: 10px">
+
+    </div>
 
     <div style="padding-left: 10px; padding-top: 10px; text-align: left; width: auto; height: 150px;
             border:solid 5px; border-color:#2DA2BF; border-width: 4px 4px 4px 4px;
@@ -29,7 +37,10 @@
 <script>
     $(document).ready(function(){
         updateTimes();
-        setInterval(updateTimes,1000);
+        setInterval(updateTimes,60000);
+
+        updateTalks();
+        //setInterval(updateTalks,5000);
     });
 
     $("#btn_clock_in").click(function(){
@@ -89,6 +100,20 @@
             //    alert('loadding time error');
             //}
         });
-    }
+    };
+
+    function updateTalks(){
+        $.ajax({
+            url: "/knock/get_talk",
+            cache: false,
+            success: function(html){
+                $("#talk").html(html);
+            }
+            //,
+            //error: function(){
+            //    alert('loadding time error');
+            //}
+        });
+    };
 </script>
 
