--- a/app/views/home/my_hourse.html.erb
+++ b/app/views/home/my_hourse.html.erb
@@ -2,7 +2,9 @@
 <div style="font-size: 30px;float: left;margin-top:50px;margin-left:10%">
     <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
     </p></br>
-    <%= link_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
+    <%= link_to "個人打卡", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
+    </p></br>
+    <%= link_to "團隊打卡", team_hourse_path, {:style => "width: 100px;height: 30px" } %>
 
     <!--<%= button_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>-->
 </div>
@@ -32,8 +34,8 @@
   <!--<button id="btn_query_knock" type="button" style="width: 70px;height: 35px"> 查詢 </button>-->
 </div>
 
-<div id ="div_knock_records"  style="width: 55%;margin: auto;">
-    <%= render :partial => "knock/knock_records" %>
+<div id ="div_my_month_knocks"  style="width: 55%;margin: auto;">
+    <%= render :partial => "knock/my_month_knocks" %>
 </div>
 
 <script>
@@ -48,12 +50,12 @@
         var select_date = select_year + "," + select_month
 
         $.ajax({
-            url: "/home/query_knock",
+            url: "/home/query_my_month_knocks",
             type: 'POST',
             data:  {select_date:select_date},
             cache: false,
             success: function(data){
-                $('#div_knock_records').html(data);
+                $('#div_my_month_knocks').html(data);
             },
             error: function(){
                 alert('oops! 出現錯誤了!');
@@ -67,12 +69,12 @@
         var select_date = select_year + "," + select_month
 
         $.ajax({
-            url: "/home/query_knock",
+            url: "/home/query_my_month_knocks",
             type: 'POST',
             data:  {select_date:select_date},
             cache: false,
             success: function(data){
-                $('#div_knock_records').html(data);
+                $('#div_my_month_knocks').html(data);
             },
             error: function(){
                 alert('oops! 出現錯誤了!');
@@ -87,12 +89,12 @@
         var select_date = select_year + "," + select_month
 
         $.ajax({
-            url: "/home/query_knock",
+            url: "/home/query_my_month_knocks",
             type: 'POST',
             data:  {select_date:select_date},
             cache: false,
             success: function(data){
-                $('#div_knock_records').html(data);
+                $('#div_my_month_knocks').html(data);
             },
             error: function(){
                 alert('oops! 出現錯誤了!');
