--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,16 @@
+<div style="font-size: 30px;float: left;margin-top:50px;margin-left:10%">
+  <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
+  </p></br>
+  <%= link_to "個人打卡", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
+  </p></br>
+  <%= link_to "團隊打卡", team_hourse_path, {:style => "width: 100px;height: 30px" } %>
 
+  <!--<%= button_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>-->
+</div>
 
 <!--<h2>Edit <%= resource_name.to_s.humanize %></h2>-->
+
+<div style="width: 55%; margin:auto ; text-align: center">
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -37,10 +47,9 @@
     <%= f.text_field :department %>
   </div>
 
-  <div><%= f.label :current_password,"輸入目前密碼修改" %>
+  <div><%= f.label :current_password,"輸入目前密碼驗證" %>
     <%= f.password_field :current_password %>
   </div>
-
 
   <div><%= f.submit "確認修改" %></div>
 <% end %>
@@ -50,3 +59,5 @@
 <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
 
 <%= link_to "回上一頁", :back %>
+
+</div>
