--- a/app/views/knock/_my_month_knocks.html.erb
+++ b/app/views/knock/_my_month_knocks.html.erb
@@ -40,7 +40,7 @@
 
   <tr>
     <td colspan="2"></td>
-    <td colspan="2" style="text-align: left;padding-left: 10px">確認簽名:</td>
+    <td colspan="2" style="text-align: left;padding-left: 10px;height:40px">確認簽名:</td>
   </tr>
 
 </table>
