--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,5 @@
 <div style="font-size: 30px;float: left;margin-top:50px;margin-left:10%">
-  <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
-  </p></br>
-  <%= link_to "個人打卡", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
-  </p></br>
-  <%= link_to "團隊打卡", team_hourse_path, {:style => "width: 100px;height: 30px" } %>
-
-  <!--<%= button_to "打卡紀錄", my_hourse_path, {:style => "width: 100px;height: 30px" } %>-->
+  <%= render :partial => "home/left_menu" %>
 </div>
 
 <!--<h2>Edit <%= resource_name.to_s.humanize %></h2>-->
