--- a/app/views/home/team_hourse.html.erb
+++ b/app/views/home/team_hourse.html.erb
@@ -1,10 +1,6 @@
 
 <div style="font-size: 30px;float: left;margin-top:50px;margin-left:10%">
-  <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
-  </p></br>
-  <%= link_to "個人打卡", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
-  </p></br>
-  <%= link_to "團隊打卡", team_hourse_path, {:style => "width: 100px;height: 30px" } %>
+  <%= render :partial => "home/left_menu" %>
 </div>
 
 <div style="width: 55%; margin:auto ; text-align: center">
