--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -15,10 +15,10 @@
             border:solid 5px; border-color:#2DA2BF; border-width: 4px 4px 4px 4px;
             outline:solid 2px; outline-color:#2DA2BF; outline-offset: -7px ;border-radius: 5px 5px 5px 5px">
 
-      <div style="text-align: left;font-size:20px;margin-bottom: 10px;color: #4400CC">codream</div>
-      <p>法師-瑞秋 : 產品細部規劃、行銷企劃與文案、外部合作規劃
-      <p>牧師-胖達 : 產品開發、開發技術研發
-      <p>坦克-山丘 : 工作協調、團隊行銷、資源規劃與取得、產品控管、架構設計、開發協助
+      <div style="text-align: left;font-size:20px;margin-bottom: 10px;color: #4400CC">夢想與使命</div>
+      <p>一、浩瀚世界裡，我們選擇孤苦貧困有天分的孩子， 他們是無辜並純潔的。若在他們人生舞台中注入跳動的音符， 必在快樂充實中找到真理與道路。
+      <p>二、102年11月16日 至 103年11月16日，法律顧問由吳光明律師擔任。
+
 
     </div>
 
