--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -3,7 +3,7 @@
 
     <div id="talk" style="text-align: center">
         Hi ,
-        <%-# current_user.name %>
+        <%= @current_user.name %>
 
     </div>
 
@@ -18,13 +18,13 @@
       <div style="text-align: left;font-size:20px;margin-bottom: 10px;color: #4400CC">夢想與使命</div>
       <p>一、浩瀚世界裡，我們選擇孤苦貧困有天分的孩子， 他們是無辜並純潔的。若在他們人生舞台中注入跳動的音符， 必在快樂充實中找到真理與道路。
       <p>二、102年11月16日 至 103年11月16日，法律顧問由吳光明律師擔任。
-
+      <p> TIPS: 上班打卡，不管按幾次都只算第一次，下班打卡，但永遠會更新你記最後一次打卡紀錄
 
     </div>
 
     <div style="margin-top: 15px;">
       <!--<label style="float: left;">打卡備註:</label>-->
-      <input id="description"type="text" style="width: 530px;margin-right:0 " placeholder="今日如在非公司規定上下班時間打卡,請在此填寫原因,謝謝" />
+      <input id="description"type="text" style="width: 530px;margin-right:0 " placeholder="<%= @placeholder%>" value="<%=@userNote%>"/>
     </div>
 
     <div style="font-size: 30px;text-align: center ;margin-top:10px">
@@ -35,12 +35,11 @@
 
 
 <script>
-    $(document).ready(function(){
-        updateTimes();
-        setInterval(updateTimes,60000);
 
-        updateTalks();
-        //setInterval(updateTalks,5000);
+    updateTimes();
+
+    $(window).load(function(){
+        var iTimer = setInterval(updateTimes,60000);
     });
 
     $("#btn_clock_in").click(function(){
@@ -102,18 +101,6 @@
         });
     };
 
-    function updateTalks(){
-        $.ajax({
-            url: "/knock/get_talk",
-            cache: false,
-            success: function(html){
-                $("#talk").html(html);
-            }
-            //,
-            //error: function(){
-            //    alert('loadding time error');
-            //}
-        });
-    };
+
 </script>
 
