bug fix: 1. cannot login problem

--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -3,7 +3,7 @@
 
     <div id="talk" style="text-align: center">
         Hi ,
-        <%= @current_user.name %>
+        <%= @userName %>
 
     </div>
 
