New function 1. new alert message  2. day select  3. update Note  (add  note_date in Knock)  4. check in out rule renew.

--- a/app/views/home/_left_menu.erb
+++ b/app/views/home/_left_menu.erb
@@ -1,5 +1,5 @@
 <%= link_to "基本資料", edit_user_registration_path, {:style => "width: 100px;height: 30px" } %>
 </p></br>
-<%= link_to "個人打卡", my_hourse_path, {:style => "width: 100px;height: 30px" } %>
+<%= link_to "個人打卡", my_house_path, {:style => "width: 100px;height: 30px" } %>
 </p></br>
-<%= link_to "團隊打卡", team_hourse_path, {:style => "width: 100px;height: 30px" } %>
+<%= link_to "團隊打卡", team_house_path, {:style => "width: 100px;height: 30px" } %>
