--- a/app/views/home/_my_month_knocks.html.erb
+++ b/app/views/home/_my_month_knocks.html.erb
@@ -1,10 +1,10 @@
 
 <div id="updateMSG" style="position: absolute;color: #ff4e87;font:16pt; display:none; " > x </div>
 
-<table border="2" style="width: 500px;margin: auto;border-collapse:collapse;">
+<table border="2" style="width: 700px;margin: auto;border-collapse:collapse;">
 
   <tr>
-    <td colspan="5" style="text-align: left;padding-left: 10%">
+    <td colspan="6" style="text-align: left;padding-left: 10%">
       部門:<%= @user.department %> </br>
       姓名:<%= @user.name %> </br>
       電話:<%= @user.phone %> </br>
@@ -14,13 +14,15 @@
   <tr>
     <td style="width: 8%">日期</td>
     <td style="width: 7%">星期</td>
-    <td style="width: 20%">上班時間</td>
-    <td style="width: 20%">下班時間</td>
+    <td style="width: 10%">上班時間</td>
+    <td style="width: 10%">下班時間</td>
     <td style="width: 45%">備註
       <img id="editNote"  src="/images/Text-Edit-icon.png" onmouseover="this.style.cursor='pointer';this.style.cursor='hand'" onmouseout="this.style.cursor='default'"
              style="width:20px; border:0; cursor:hand;" alt="Click to edit other note! And press ENTER after you editing." />
 
     </td>
+    <td style="width: 20%"> IP </td>
+
   </tr>
 
       <% @knocks_of_month.each_with_index do |element, index| %>
@@ -45,11 +47,21 @@
               <% end %>
 
             </td>
+            <td style="font-size: 60%">
+              <% if !element.blank? && !element.in_ip.blank? %>
+                   <%= element.in_ip %>
+              <% end %>
+              <% if !element.blank? && !element.out_ip.blank? %>
+                   :<%= element.out_ip %>
+              <% end %>
+
+            </td>
+
           </tr>
   <% end %>
 
   <tr>
-    <td colspan="5" style="text-align: left;padding-left: 10px;height:40px">確認簽名:  </td>
+    <td colspan="6" style="text-align: left;padding-left: 10px;height:40px">確認簽名:  </td>
   </tr>
 
 </table>
