--- a/app/views/home/_my_month_knocks.html.erb
+++ b/app/views/home/_my_month_knocks.html.erb
@@ -41,7 +41,7 @@
             </td>
             <td style="text-align:left">
               <% if !element.blank? && !element.description.blank? %>
-                  <input type="text"  value="<%=element.description%>"  name="<%= @year%>-<%= @month%>-<%= index + 1 %>">
+                  <textarea width="100%"  name="<%= @year%>-<%= @month%>-<%= index + 1 %>"> <%=element.description%> </textarea>
                   <%else%>
                   <input type="text"  value="" style="display: none" name="<%= @year%>-<%= @month%>-<%= index + 1 %>">
               <% end %>
