--- a/app/views/knock/index.html.erb
+++ b/app/views/knock/index.html.erb
@@ -15,18 +15,17 @@
     <div style="padding-left: 10px; padding-top: 10px; text-align: left; width: auto; height: 150px;
             border:solid 5px; border-color:#2DA2BF; border-width: 4px 4px 4px 4px;
             outline:solid 2px; outline-color:#2DA2BF; outline-offset: -7px ;border-radius: 5px 5px 5px 5px">
-
-      <div style="text-align: left;font-size:20px;margin-bottom: 10px;color: #4400CC">夢想與使命</div>
-      <p>一、浩瀚世界裡，我們選擇孤苦貧困有天分的孩子， 他們是無辜並純潔的。若在他們人生舞台中注入跳動的音符， 必在快樂充實中找到真理與道路。
-      <p>二、102年11月16日 至 103年11月16日，法律顧問由吳光明律師擔任。
-      <p> TIPS: 上班打卡，不管按幾次都只算第一次，下班打卡，會一直更新你記最後一次打卡紀錄
-      （公司IP: 59.124.93.73）
-
+      <ol>
+      <div style="text-align: left;font-size:20px;margin-bottom: 10px;color: #4400CC"><%=@ws[1,1] %></div>
+      <% for row in 2..@ws.num_rows %>
+              <li><%= @ws[row,1] %></li>
+      <% end %>
+      </ol>
     </div>
 
     <div style="margin-top: 15px;">
       <!--<label style="float: left;">打卡備註:</label>-->
-      <input id="description"type="text" style="width: 530px;margin-right:0 " placeholder="<%= @placeholder%>" value="<%=@userNote%>"/>
+      <input id="description"type="text" style="width: 530px;margin-right:0 " placeholder="<%= @placeholder%>" value="<%=@user_note%>"/>
     </div>
 
     <div style="font-size: 30px;text-align: center ;margin-top:10px">
